Bug 1674150 - Check for the actual snap name when detecting whether running as a snap. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D95171